Updated resume and contact
Updated resume and contact

--- a/resume.html
+++ b/resume.html
@@ -154,15 +154,26 @@
                     <h3>Work Experience</h3>
                     <h5>Systems Engineer at <a href="https://www.qualcomm.com/" target="_blank">Qualcomm</a> (Jan 2020 - Present)
                     </h5>
+                    <ul></ul>
+                    <h7>My role as part of the Automotive Safety Systems team is to understand functional safety expectations of an SoC (System on Chip) and co-ordinate with various IP teams that make up the SoC, to achieve the intended functionality and functional safety of the automotive system as per ISO 26262 (International Automotive Functional Safety Standards).</h7>
+                    <ul></ul>
+                    <h7>My responsibilities include, but are not limited to:</h7>
                     <ul>
-                        <li>Developed a visual representation of SoC and IP level safety systems design and architecture for effective customer engagement.</li>
-                        <li>Designed system architecture diagrams highlighting the safety mechanisms, requirements and Assumption of Use (AoU) at the IP and SoC levels.</li>
-                        <li>Analyzed IP level design details to incorporate IP interfaces at the SoC level.</li>
-                        <li>Achieved the diagnostic coverage required by ISO26262 standard by performing safety analyses such as FMEDA, DFEMA, and DFA for various SoCs.</li>
-                        <li>Coordinated with IP teams to understand the IP-level safety analyses and incorporated the same on SoC level safety analyses.</li>
-                        <li>Identified IP/SoC design vulnerabilities and worked with respective teams to improve the design.</li>
-                        <li>Automated a what-if analysis on FMEDA using MS Excel macros.</li>
-                        <li>Authored and reviewed internal and customer-facing functional safety architecture documents and requirements.</li>
+                        <li>Understanding the automotive use-case for a system and the individual IP components.</li>
+                        <li>Documenting technical requirements at the system and IP levels.</li>
+                            <ul><li>Requirements are written and managed through the JAMA tool.</li></ul>
+                        <li>Authoring technical concept documents for the system.</li>
+                        <li>Authoring system architecture specification documents.</li>
+                        <li>Preparing flow charts, diagrams, and presentations to visually represent an SoC and/or IP. Such documents are used for:</li>
+                        <ul><li>Effective customer engagement</li></ul>
+                        <ul><li>Coordinating with various IP teams to explain each IP’s individual functionality and role, interactions with other IPs and the SoC itself, to achieve the end goal.</li></ul>
+                        <li>Performing various safety analyses such as FMEDA, DFA and DFMEA for both SoC (System on Chip) and individual IP components.</li>
+                        <ul><li>This is done to ensure that every IP that constitute the SoC and the SoC itself, adhere to the ISO26262 automotive safety standards.</li></ul>
+                        <li>Documenting and tracking IP and system level changes through the JIRA tool.</li>
+                        <li>Establishing traceability from functional to technical requirements, hard-ware requirements and then to the corresponding verification and validation test cases.</li>
+                        <ul><li>Use various internal tools to achieve this.</li></ul>
+                        <ul><li>Develop python scripts to automate and speed up the traceability process.</li></ul>
+                        <li>Ensuring all safety lifecycle processes and development adhere to the project road map.</li>
                         <table class="table table-bordered table-hover">
                             <tr>
                                 <th colspan="3">Key learnings</th>
