--- a/contact.html
+++ b/contact.html
@@ -69,9 +69,9 @@
                   <th><i class="icon-home"></i> Address</th>
                 </tr>
                 <tr>
-                  <td>3800 Southwest 34th Street, Gainesville, FL, USA</td>
-                  <td>Apartment number: W216</td>
-                  <td>Zip code: 32608</td>
+                  <td>23511 Aliso Creek Rd., Aliso Viejo, CA</td>
+                  <td>Apartment number: 170</td>
+                  <td>Zip code: 92656</td>
                 </tr>
               </table>
             </div>
