--- a/projects.html
+++ b/projects.html
@@ -49,6 +49,9 @@
 				<ul id="resumeSideNavBar" class="nav nav-pills nav-stacked affix">
 					<li class="nav-header">Academic Projects</li>
 					<li>
+						<a href="#TwitterClone">Twitter Clone</a>
+					</li>
+					<li>
 						<a href="#REDS">R-E-D-S</a>
 					</li>
 					<li class="nav-header">Contests Entry Projects</li>
@@ -75,6 +78,23 @@
 				<div class="page-header">
 					<h1>Projects<small> Academic, Contests and Courses</small></h1>
 				</div>
+
+				<section id="TwitterClone">
+					<h3>Twitter Clone using distributed systems with Elixir and Phoenix framework</h3>
+					
+					<h5>Goal</h5>
+					<p>To design, develop and construct a real-time working Twitter engine clone</p>
+					<h5>Motivation</h5>
+					<ul>
+						<li>To learn and implement distributed software system using Elixir and Phoenix framework</li>
+					</ul>
+					<em>Twitter Clone Demo</em>
+					<div style="position:relative;height:0;padding-bottom:56.21%"><iframe
+						src="https://www.youtube.com/embed/-MFAtywSL5g"
+						style="position:absolute;width:100%;height:100%;left:0" width="641" height="360"
+						frameborder="0" allowfullscreen></iframe></div>
+
+				</section>
 
 				<section id="REDS">
 					<h3>Real-time Embedded system for Differently abled and Senior citizens (R-E-D-S)- B.Tech Final
