--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
                         <br>
 
                         <h4>About</h4>
-                        <p>I am a computer engineering postgraduate with 6+ years of experience designing and architecting software systems and automotive safety systems. I am very passionate about cars and IoT. My ideal new role would allow me to work closely with next-gen automotive systems and/or connected smart devices.</p>
+                        <p>A system software designer with six years of experience designing and architecting software systems and automotive safety systems. With my recent experience as a safety systems engineer, I am looking for a change and would like
+                            to jump back to working on software and building scalable SW solutions. I am very passionate about cars and IoT. My ideal new role would allow me to work closely with next-gen automotive systems and connected smart devices.</p>
                         <table class="table table-bordered table-hover">
                             <tr>
                                 <th colspan="3">Computer Engineering (Major)</th>
