--- a/index.html
+++ b/index.html
@@ -71,17 +71,22 @@
                             to jump back to working on software and building scalable SW solutions. I am very passionate about cars and IoT. My ideal new role would allow me to work closely with next-gen automotive systems and connected smart devices.</p>
                         <table class="table table-bordered table-hover">
                             <tr>
-                                <th colspan="3">Computer Engineering (Major)</th>
+                                <th colspan="3">Computer Engineering(Major)</th>
                             </tr>
                             <tr>
                                 <td>Principles of Computer System Design</td>
-                                <td>Virtual Computers</td>
-                                <td>Automotive Safety and Security</td>
+                                <td>Reconfigurable Computing</td>
+                                <td>Computer Architecture</td>
                             </tr>
                             <tr>
                                 <td>Advanced Systems Programming</td>
+                                <td>Virtual Computers</td>
                                 <td>Distributed Operating System Principles</td>
+                            </tr>
+                            <tr>
                                 <td>Image Processing and Computer Vision</td>
+                                <td>Fundamentals of Engineering Project Management</td>
+                                <td>Engineering Leadership</td>
                             </tr>
                         </table>
                         <div>
