Updated the entire website
lot of updates in all html files. removed contact

--- a/index.html
+++ b/index.html
@@ -29,15 +29,13 @@
     <div class="navbar navbar-fixed-top navbar-inverse">
         <div class="navbar-inner">
             <div class="container">
-                <a class="brand" href="index.html">Sattanaathan Thayumanan</a>
+                <a target="_blank" rel="noopener noreferrer" class="brand" href="https://www.linkedin.com/in/sattanaathan-thayumanan/">Sattanaathan Thayumanan</a>
                 <ul class="nav" id="mainTabs">
                     <li class="active"><a href="index.html"><i class="icon-home icon-white"></i> Home</a></li>
                     <li><a href="projects.html"><i class="icon-cog icon-white"></i> Projects</a></li>
                     <li><a href="resume.html"><i class="icon-list-alt icon-white"></i> Resume</a></li>
                     <li><a href="courses.html"><i class="icon-book icon-white"></i> Academics</a></li>
-                    <li><a href="contact.html"><i class="icon-envelope icon-white"></i> Contact</a></li>
-
-                    <!-- <li><a href="#">Link</a></li> -->
+                    <!-- <li><a href="contact.html"><i class="icon-envelope icon-white"></i> Contact</a></li> -->
                 </ul>
             </div>
         </div>
@@ -53,42 +51,47 @@
             </li>
           </ul>-->
             </div>
-            <div class="span9">
+            <div class="span12">
                 <!--Body content-->
                 <div id="aboutme" class="row">
-                    <div class="span5">
-                        <h3>Sattanaathan Thayumanan</h3>
-                        <p>
-                            Master of Science<br>
-                            <a href="http://www.ece.ufl.edu/" target="_blank"><b>Electrical and Computer Engineering</b></a><br>
-                            <a href="http://www.ufl.edu/" target="_blank">University of Florida, Gainesville</a><br>
-                        </p>
-
-                        <br>
-
+                    <div class="span9">
+                        <div class="page-header">
+                            <h1>Sattanaathan Thayumanan</h1>
+                                <h3><b>Master of Science</b></h3>
+                                <a href="http://www.ece.ufl.edu/" target="_blank"><b>Electrical and Computer Engineering</b></a><br>
+                                <a href="http://www.ufl.edu/" target="_blank">University of Florida, Gainesville</a><br>    
+                        </div>
                         <h4>About</h4>
                         <p>A system software designer with six years of experience designing and architecting software systems and automotive safety systems. With my recent experience as a safety systems engineer, I am looking for a change and would like
                             to jump back to working on software and building scalable SW solutions. I am very passionate about cars and IoT. My ideal new role would allow me to work closely with next-gen automotive systems and connected smart devices.</p>
+                        <br>
                         <table class="table table-bordered table-hover">
                             <tr>
-                                <th colspan="3">Computer Engineering(Major)</th>
+                                <th colspan="3">Computer Engineering (Major)</th>
                             </tr>
                             <tr>
                                 <td>Principles of Computer System Design</td>
-                                <td>Reconfigurable Computing</td>
+                                <td>Advanced Systems Programming</td>
                                 <td>Computer Architecture</td>
                             </tr>
                             <tr>
-                                <td>Advanced Systems Programming</td>
-                                <td>Virtual Computers</td>
+                                <td>Image Processing and Computer Vision</td>
                                 <td>Distributed Operating System Principles</td>
+                                <td>Virtual Computers</td>
                             </tr>
                             <tr>
-                                <td>Image Processing and Computer Vision</td>
+                                <td>Reconfigurable Computing</td>
                                 <td>Fundamentals of Engineering Project Management</td>
                                 <td>Engineering Leadership</td>
                             </tr>
                         </table>
+                    </div>
+                    <div class="span3">
+                        <img src="bootstrap/img/informal_me.jpg" class="img-rounded" /><br>
+                        <!-- <p style="text-align:center">(That's me <i class="icon-arrow-up"></i>)</p> -->
+                        <br>
+                        <br>
+                        <br>
                         <div>
                             <h4>Resume</h4>
                             <table class="table table-bordered table-hover">
@@ -104,17 +107,14 @@
                                 </tr>
                             </table>
                         </div>
+                        <br>
                         <div>
                             <!-- <h5>Contact</h5> -->
                             <h4>Contact</h4>
                             <table class="table table-bordered table-hover">
                                 <tr>
-                                    <td>vtsnaathan [@] gmail [.] com</td>
+                                    <td><a href="mailto:vtsnaathan@gmail.com" target="_blank">vtsnaathan@gmail.com</a></td>
                                     <td><a href="mailto:vtsnaathan@gmail.com" target="_blank"><i class="icon-envelope"></i></a></td>
-                                </tr>
-                                <tr>
-                                    <td>s [.] thayumanan [@] ufl [.] edu </td>
-                                    <td><a href="mailto:s.thayumanan@ufl.edu" target="_blank"><i class="icon-envelope"></i></a></td>
                                 </tr>
                                 <tr>
                                     <td>+1 (352) 284 9712</td>
@@ -122,10 +122,6 @@
                                 </tr>
                             </table>
                         </div>
-                    </div>
-                    <div class="span3">
-                        <img src="bootstrap/img/informal_me.jpg" class="img-rounded" /><br>
-                        <p style="text-align:center">(That's me <i class="icon-arrow-up"></i>)</p>
                     </div>
                 </div>
             </div>
@@ -143,7 +139,6 @@
             a.src = g;
             m.parentNode.insertBefore(a, m)
         })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
-
         ga('create', 'UA-43264580-1', 'sattanaathan.in');
         ga('send', 'pageview');
     </script>
