--- a/projects.html
+++ b/projects.html
@@ -30,15 +30,13 @@
 	<div class="navbar navbar-fixed-top navbar-inverse">
 		<div class="navbar-inner">
 			<div class="container">
-				<a class="brand" href="index.html">Sattanaathan Thayumanan</a>
+				<a target="_blank" rel="noopener noreferrer" class="brand" href="https://www.linkedin.com/in/sattanaathan-thayumanan/">Sattanaathan Thayumanan</a>
 				<ul class="nav" id="mainTabs">
 					<li><a href="index.html"><i class="icon-home icon-white"></i> Home</a></li>
 					<li class="active"><a href="projects.html"><i class="icon-cog icon-white"></i> Projects</a></li>
 					<li><a href="resume.html"><i class="icon-list-alt icon-white"></i> Resume</a></li>
 					<li><a href="courses.html"><i class="icon-book icon-white"></i> Academics</a></li>
-					<li><a href="contact.html"><i class="icon-envelope icon-white"></i> Contact</a></li>
-
-					<!-- <li><a href="#">Link</a></li> -->
+					<!-- <li><a href="contact.html"><i class="icon-envelope icon-white"></i> Contact</a></li> -->
 				</ul>
 			</div>
 		</div>
@@ -61,9 +59,6 @@
 					<li>
 						<a href="#SW">Smart Watch</a>
 					</li>
-					<!--<li>
-                <a href="#HA">Home Automation</a>
-            </li>-->
 					<li class="nav-header">Projects Part of Courses</li>
 					<li>
 						<a href="#FM">Wireless Non-Invasive<br>Flow Meter</a>
@@ -328,19 +323,6 @@
 
 				<hr class="separator" />
 
-				<!--<section id="HA">
-			<h3>HOME AUTOMATION AND POWER MONITOR</h3>
-			<h5>Guide:</h5><i><a href="https://www.nitt.edu/home/academics/departments/eee/people/faculty/aprof/moorthi/" target="_blank"><b>Dr.S.Moorthi</b></a>, Associate Professor, Department of Electrical and Electronics Engineering, NIT Trichy</i>
-			<h5>Goal</h5>
-				<p>To design, develop and construct a prototype of real-life working product - a Power meter with Home automation system using Papilio one FPGA and MSP430 microcontrollers</p>
-			<h5>Abstract</h5>
-			<p>
-				Developed a centralized monitoring system, capable of monitoring status of home power consumption and also controlling appliances over Wireless Local Area Network using embedded systems.
-			</p>
-		</section>
-		
-		<hr class="separator" />-->
-
 				<section id="FM">
 					<h3>WIRELESS NON INVASIVE FLOW METER</h3>
 					<h5>Guide:</h5><i><a
@@ -418,13 +400,9 @@
 			}, i[r].l = 1 * new Date(); a = s.createElement(o),
 				m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
 		})(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
-
 		ga('create', 'UA-43264580-1', 'sattamaathan.in');
 		ga('send', 'pageview');
-
 	</script>
 </body>
-<!-- // $('img').click(function(){window.open($(this).attr('src'));console.log($(this));});
-  // $('img').hover(function(){$(this).css('cursor','pointer');},function(){$(this).css('cursor','auto');}); -->
 
 </html>
