--- a/resume.html
+++ b/resume.html
@@ -32,15 +32,13 @@
     <div class="navbar navbar-fixed-top navbar-inverse">
         <div class="navbar-inner">
             <div class="container">
-                <a class="brand" href="index.html">Sattanaathan Thayumanan</a>
+                <a target="_blank" rel="noopener noreferrer" class="brand" href="https://www.linkedin.com/in/sattanaathan-thayumanan/">Sattanaathan Thayumanan</a>
                 <ul class="nav" id="mainTabs">
                     <li><a href="index.html"><i class="icon-home icon-white"></i> Home</a></li>
                     <li><a href="projects.html"><i class="icon-cog icon-white"></i> Projects</a></li>
                     <li class="active"><a href="resume.html"><i class="icon-list-alt icon-white"></i> Resume</a></li>
                     <li><a href="courses.html"><i class="icon-book icon-white"></i> Academics</a></li>
-                    <li><a href="contact.html"><i class="icon-envelope icon-white"></i> Contact</a></li>
-
-                    <!-- <li><a href="#">Link</a></li> -->
+                    <!-- <li><a href="contact.html"><i class="icon-envelope icon-white"></i> Contact</a></li> -->
                 </ul>
             </div>
         </div>
@@ -49,107 +47,20 @@
         <div class="row">
             <div class="span3 sideNav">
                 <ul id="resumeSideNavBar" class="nav nav-pills nav-stacked affix">
-                    <li>
-                        <a href="#education">Education</a>
-                    </li>
-                    <li><a href="#acadAchievements">Achievements</a></li>
-                    <li><a href="#skills">Skills</a></li>
+                    <li class="nav-header">Experience</li>
                     <li><a href="#work">Work Experience</a></li>
                     <li><a href="#teach">Teaching Experience</a></li>
                     <li><a href="#lead">Leadership Experience</a></li>
-                    <!-- <li><a href="#">...</a></li> -->
+                    <li class="nav-header">Achievements & Skills</li>
+                    <li><a href="#acadAchievements">Achievements</a></li>
+                    <li><a href="#skills">Skills</a></li>
+                    <li><a href="#education">Education</a></li>
                 </ul>
             </div>
             <div class="span9">
-                <section id="education">
-                    <h3>Education</h3>
-                    <table class="table table-bordered">
-                        <tr>
-                            <th>Program</th>
-                            <th>Major</th>
-                            <th>Institution</th>
-                            <th>% / CGPA</th>
-                            <th> Year of completion </th>
-                        </tr>
-                        <tr>
-                            <td>Master of Science (MS)</td>
-                            <td>Computer Engineering</td>
-                            <td>
-                                <a href="https://www.ece.ufl.edu/" target="_blank">
-                                    <p style="text-decoration:none">University of Florida, Gainesville</p>
-                                </a>
-                            </td>
-                            <td>3.7/4</td>
-                            <td>December 2019</td>
-                        </tr>
-
-                        <tr>
-                            <td>Bachelor of Technology (B.Tech)</td>
-                            <td>Electrical and Electronics</td>
-                            <td><a href="https://www.nitt.edu/home/academics/departments/eee/" style="background:none" target="_blank">National Institute of Technology, Tiruchirappalli</a></td>
-                            <td>7.20/10 <br></td>
-                            <td>May 2016</td>
-                        </tr>
-                    </table>
-
-                </section>
-                <hr class="separator" />
-                <section id="acadAchievements">
-                    <h3>Achievements and Awards</h3>
-                    <h5>Texas Instruments Innovation Challenge India Design Contest 2015</h5>
-                    <p>Top 86 semi-finalist from 1209 teams <a href="http://e2e.ti.com/group/universityprogram/w/contests/2436.contest-winners.aspx"> Semi-finalist,
-              Texas Instruments Innovation Challenge India Design Contest 2015 </a> among over 1200 participating teams from all over the country competing in various fields and technologies of Electronics</p>
-                    <div class="row">
-                        <div class="span9">
-                            <em>Entry to Texas Instruments Innovation Challenge India Design Contest 2015</em>
-                            <div style="position:relative;height:0;padding-bottom:56.21%"><iframe src="https://www.youtube.com/embed/2GoS7ifl-4o?ecver=2" style="position:absolute;width:100%;height:100%;left:0" width="641" height="360" frameborder="0" allowfullscreen></iframe></div>
-                            <br><em>Working Demo</em>
-                            <div style="position:relative;height:0;padding-bottom:56.21%"><video style="position:absolute;width:100%;height:100%;left:0" width="641" height="360" frameborder="0" controls>
-                  <source src="img/ti idc video.mp4" type="video/mp4">
-                  Your browser does not support the video tag.
-                </video></div>
-                        </div>
-                    </div>
-                    <br>
-                    <h5>Sangam, Pragyan 2014</h5>
-                    <p>Sangam 2014 Second Runner-up, Sangam Pragyan - 2014 </a> among over 300 participating teams competing in various fields and technologies</p>
-                    <div class="row">
-                        <div class="span9">
-                            <em>Working Demo</em>
-                            <div style="position:relative;height:0;padding-bottom:56.21%"><video style="position:absolute;width:100%;height:100%;left:0" width="641" height="360" frameborder="0" controls>
-                  <source src="img/smartwatch.mp4" type="video/mp4">
-                  Your browser does not support the video tag.
-                </video></div>
-                        </div>
-                    </div>
-                </section>
-
-                <hr class="separator" />
-                <section id="skills">
-                    <h3>Technical Skills</h3>
-                    <table class="table table-bordered table-hover">
-                        <tr>
-                            <th>Languages</th>
-                            <td>Embedded C, JAVA, C, C++, Python, <a href="https://elixir-lang.org/" target="_blank">Elixir</a>, <a href="http://www.plcdev.com/book/export/html/9" target="_blank">PLC</a>, <a href="http://www.mathworks.in/products/matlab/"
-                                    target="_blank">MATLAB</a>, C#, <a href="https://www.lua.org/" target="_blank">Lua</a>, Visual Basics (VBA)</td>
-                        </tr>
-                        <tr>
-                            <th>Electronics</th>
-                            <td>AVR micro-controllers (Atmega 8/16/32), <a href="http://arduino.cc" target="_blank">Arduino</a>,
-                                <a></a>TI micro-controllers (MSP430)</a>, <a>Xilinx FPGA (NB3000 host board)</a>, <a href="http://papilio.cc/" target="_blank">Papilio FPGA (Papilio One 500K board)</a></td>
-                        </tr>
-                        <tr>
-                            <th>Software development</th>
-                            <td> <a href="https://developer.android.com/studio/" target="_blank">Android Studio</a>, <a href="https://visualstudio.microsoft.com/" target="_blank">Visual Studio</a>, <a href="https://www.3ds.com/products-services/catia/products/controlbuild/"
-                                    target="_blank">ControlBuild</a>, <a href="http://www.ni.com/en-sg/shop/labview/labview-details.html" target="_blank">NI LabVIEW</a>, <a href="https://www.embarcadero.com/products/delphi/" target="_blank">Delphi</a></td>
-                        </tr>
-                        <tr>
-                            <th>Operating Systems</th>
-                            <td>Linux and Windows</td>
-                        </tr>
-                    </table>
-                </section>
-                <hr class="separator" />
+                <div class="page-header">
+					<h1>Resume<small> Experience, Achievements, Skills, & Education</small></h1>
+				</div>
                 <section id="work">
                     <h3>Work Experience</h3>
                     <h5>Systems Engineer at <a href="https://www.qualcomm.com/" target="_blank">Qualcomm</a> (Jan 2020 - Present)
@@ -262,7 +173,6 @@
                     <h5>Intern at <a href="http://www.alstom.com/" target="_blank">ALSTOM</a> (May 2015 - July 2015)</h5>
                     <ul>
                         <li>Designed and developed Simulation of Train Low Voltage Control Logics</li>
-                        <!--<li>Key learnings: <PRE>ControlBuild | NI LabVIEW | NI PXI cards | Train control</PRE></li>-->
                         <table class="table table-bordered table-hover">
                             <tr>
                                 <th colspan="3">Key learnings</th>
@@ -285,12 +195,11 @@
                         <p> As a motive to teach underprivileged students and share knowledge on android application development and embedded systems, I organized and conducted 2 workshops. A 3 day workshop for over 60+ students at College of Engineering,
                             Guindy and a 4 day workshop at Knowledge Institute of Technology, Salem. In which me and my team provided them with hands-on experience in Arduino and Android Application Development.</p>
                         <div class="row">
-                            <div class="span9"><img src="img/cyber_KIOT1.jpg" class="img-rounded" align="center" /></div>
+                            <div class="span9"><img src="img/cyber_KIOT1.jpg" class="img-rounded"/></div>
                         </div>
                         </li>
                     </ul>
                 </section>
-
                 <hr class="separator" />
                 <section id="lead">
                     <h3>Leadership Experience</h3>
@@ -330,8 +239,94 @@
                         <p> Pragyan, the international techno-managerial fest of National Institute of Technology, Tiruchirappalli
                             <a href="https://www.iso.org/standard/54552.html" target="_blank">ISO 20121:2012</a> Certified. I organized and managed Brain Wave robotics workshop during Pragyan 2015.</p>
                     </ul>
-
                 </section>
+                <hr class="separator" />
+                <section id="acadAchievements">
+                    <h3>Achievements and Awards</h3>
+                    <h5>Texas Instruments Innovation Challenge India Design Contest 2015</h5>
+                    <p>Top 86 semi-finalist from 1209 teams <a href="http://e2e.ti.com/group/universityprogram/w/contests/2436.contest-winners.aspx"> Semi-finalist,
+              Texas Instruments Innovation Challenge India Design Contest 2015 </a> among over 1200 participating teams from all over the country competing in various fields and technologies of Electronics</p>
+                    <div class="row">
+                        <div class="span9">
+                            <em>Entry to Texas Instruments Innovation Challenge India Design Contest 2015</em>
+                            <div style="position:relative;height:0;padding-bottom:56.21%"><iframe src="https://www.youtube.com/embed/2GoS7ifl-4o?ecver=2" style="position:absolute;width:100%;height:100%;left:0" width="641" height="360" frameborder="0" allowfullscreen></iframe></div>
+                            <br><em>Working Demo</em>
+                            <div style="position:relative;height:0;padding-bottom:56.21%"><video style="position:absolute;width:100%;height:100%;left:0" width="641" height="360" frameborder="0" controls>
+                  <source src="img/ti idc video.mp4" type="video/mp4">
+                  Your browser does not support the video tag.
+                </video></div>
+                        </div>
+                    </div>
+                    <br>
+                    <h5>Sangam, Pragyan 2014</h5>
+                    <p>Sangam 2014 Second Runner-up, Sangam Pragyan - 2014 </a> among over 300 participating teams competing in various fields and technologies</p>
+                    <div class="row">
+                        <div class="span9">
+                            <em>Working Demo</em>
+                            <div style="position:relative;height:0;padding-bottom:56.21%"><video style="position:absolute;width:100%;height:100%;left:0" width="641" height="360" frameborder="0" controls>
+                  <source src="img/smartwatch.mp4" type="video/mp4">
+                  Your browser does not support the video tag.
+                </video></div>
+                        </div>
+                    </div>
+                </section>
+                <hr class="separator" />
+                <section id="skills">
+                    <h3>Technical Skills</h3>
+                    <table class="table table-bordered table-hover">
+                        <tr>
+                            <th>Languages</th>
+                            <td>Embedded C, JAVA, C, C++, Python, <a href="https://elixir-lang.org/" target="_blank">Elixir</a>, <a href="http://www.plcdev.com/book/export/html/9" target="_blank">PLC</a>, <a href="http://www.mathworks.in/products/matlab/"
+                                    target="_blank">MATLAB</a>, C#, <a href="https://www.lua.org/" target="_blank">Lua</a>, Visual Basics (VBA)</td>
+                        </tr>
+                        <tr>
+                            <th>Electronics</th>
+                            <td>AVR micro-controllers (Atmega 8/16/32), <a href="http://arduino.cc" target="_blank">Arduino</a>,
+                                <a></a>TI micro-controllers (MSP430)</a>, <a>Xilinx FPGA (NB3000 host board)</a>, <a href="http://papilio.cc/" target="_blank">Papilio FPGA (Papilio One 500K board)</a></td>
+                        </tr>
+                        <tr>
+                            <th>Software development</th>
+                            <td> <a href="https://developer.android.com/studio/" target="_blank">Android Studio</a>, <a href="https://visualstudio.microsoft.com/" target="_blank">Visual Studio</a>, <a href="https://www.3ds.com/products-services/catia/products/controlbuild/"
+                                    target="_blank">ControlBuild</a>, <a href="http://www.ni.com/en-sg/shop/labview/labview-details.html" target="_blank">NI LabVIEW</a>, <a href="https://www.embarcadero.com/products/delphi/" target="_blank">Delphi</a></td>
+                        </tr>
+                        <tr>
+                            <th>Operating Systems</th>
+                            <td>Linux and Windows</td>
+                        </tr>
+                    </table>
+                </section>
+                <hr class="separator" />
+                <section id="education">
+                    <h3>Education</h3>
+                    <table class="table table-bordered">
+                        <tr>
+                            <th>Program</th>
+                            <th>Major</th>
+                            <th>Institution</th>
+                            <th>% / CGPA</th>
+                            <th> Year of completion </th>
+                        </tr>
+                        <tr>
+                            <td>Master of Science (MS)</td>
+                            <td>Computer Engineering</td>
+                            <td>
+                                <a href="https://www.ece.ufl.edu/" target="_blank">
+                                    <p style="text-decoration:none">University of Florida, Gainesville</p>
+                                </a>
+                            </td>
+                            <td>3.7/4</td>
+                            <td>December 2019</td>
+                        </tr>
+
+                        <tr>
+                            <td>Bachelor of Technology (B.Tech)</td>
+                            <td>Electrical and Electronics</td>
+                            <td><a href="https://www.nitt.edu/home/academics/departments/eee/" style="background:none" target="_blank">National Institute of Technology, Tiruchirappalli</a></td>
+                            <td>7.20/10 <br></td>
+                            <td>May 2016</td>
+                        </tr>
+                    </table>
+                </section> 
             </div>
         </div>
     </div>
@@ -347,10 +342,8 @@
             a.src = g;
             m.parentNode.insertBefore(a, m)
         })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
-
         ga('create', 'UA-43264580-1', 'sattanaathan.in');
         ga('send', 'pageview');
     </script>
 </body>
-
 </html>
