--- a/courses.html
+++ b/courses.html
@@ -9,14 +9,12 @@
     <!-- Enable fluid response -->
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <!-- <link href="assets/css/bootstrap-responsive.css" rel="stylesheet"> -->
-
     <script src="bootstrap/js/jquery-latest.js"></script>
     <script src="bootstrap/js/bootstrap.min.js"></script>
     <script type="text/javascript">
         var _gaq = _gaq || [];
         _gaq.push(['_setAccount', 'UA-10620514-6']);
         _gaq.push(['_trackPageview']);
-
         (function() {
             var ga = document.createElement('script');
             ga.type = 'text/javascript';
@@ -32,15 +30,13 @@
     <div class="navbar navbar-fixed-top navbar-inverse">
         <div class="navbar-inner">
             <div class="container">
-                <a class="brand" href="index.html">Sattanaathan Thayumanan</a>
+                <a target="_blank" rel="noopener noreferrer" class="brand" href="https://www.linkedin.com/in/sattanaathan-thayumanan/">Sattanaathan Thayumanan</a>
                 <ul class="nav" id="mainTabs">
                     <li><a href="index.html"><i class="icon-home icon-white"></i> Home</a></li>
                     <li><a href="projects.html"><i class="icon-cog icon-white"></i> Projects</a></li>
                     <li><a href="resume.html"><i class="icon-list-alt icon-white"></i> Resume</a></li>
                     <li class="active"><a href="courses.html"><i class="icon-book icon-white"></i> Academics</a></li>
-                    <li><a href="contact.html"><i class="icon-envelope icon-white"></i> Contact</a></li>
-
-                    <!-- <li><a href="#">Link</a></li> -->
+                    <!-- <li><a href="contact.html"><i class="icon-envelope icon-white"></i> Contact</a></li> -->
                 </ul>
             </div>
         </div>
@@ -49,36 +45,31 @@
         <div class="row">
             <div class="span3 sideNav">
                 <ul id="resumeSideNavBar" class="nav nav-pills nav-stacked affix">
-                    <li> <a href="#ufl">University of Florida</a></li>
-                    <li>
-                        <a href="#nitt">NIT Trichy</a>
-                    </li>
-                    <!--<li><a href="#coursework">Courses</a></li>
-            <li><a href="#schooling">School Education</a></li>
-            <li><a href="#">...</a></li> -->
+                    <li class="nav-header">Post Grad</li>
+                    <li><a href="#ufl">University of Florida</a></li>
+                    <li class="nav-header">Under Grad</li>
+                    <li><a href="#nitt">NIT Trichy</a></li>
                 </ul>
             </div>
             <div class="span9">
+                <div class="page-header">
+					<h1>Education<small> MS & B.Tech.</small></h1>
+				</div>
                 <section id="ufl">
-                    <h3>
-                        <a href="https://www.ece.ufl.edu/" target="_blank">
-                            <p style="text-decoration:none">University of Florida, Gainesville</p>
-                        </a>
-                    </h3>
+                    <h3><a href="https://www.ece.ufl.edu/" target="_blank"><p style="text-decoration:none">University of Florida, Gainesville</p></a></h3>
                     <h5>Master of Science, Electrical and Computer Engineering (Fall 2018 - Fall 2019)</h5>
                     <table class="table table-bordered table-hover">
                         <tr>
                             <th>Cumulative Grade Point Average</th>
                             <th>3.70/4</th>
                         </tr>
-                        <!--<tr>Expected Graduation: December 2019</tr>-->
                     </table>
                 </section>
                 <section id="coursework">
                     <h3> Important Course work</h3>
                     <table class="table table-bordered table-hover">
                         <tr>
-                            <th colspan="3">Computer Engineering(Major)</th>
+                            <th colspan="3">Computer Engineering (Major)</th>
                         </tr>
                         <tr>
                             <td>Principles of Computer System Design</td>
@@ -97,8 +88,8 @@
                         </tr>
                         <tr>
                             <td>Engineering Leadership</td>
-                            <td />
-                            <td />
+                            <td>
+                            <td>
                         </tr>
                     </table>
                 </section>
@@ -110,17 +101,13 @@
                             <th>Cumulative Grade Point Average</th>
                             <td>7.20/10 </td>
                         </tr>
-                        <tr>
-                            <th>Graduated in July 2016</th>
-                            <td> - </td>
-                        </tr>
                     </table>
                 </section>
                 <section id="coursework">
                     <h3>Important Course work</h3>
                     <table class="table table-bordered table-hover">
                         <tr>
-                            <th colspan="3">Electrical and Electronics Engineering(Major)</th>
+                            <th colspan="3">Electrical and Electronics Engineering (Major)</th>
                         </tr>
                         <tr>
                             <td>Operating Systems</td>
@@ -162,22 +149,21 @@
             </div>
         </div>
     </div>
+    <script>
+        (function(i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r;
+            i[r] = i[r] || function() {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date();
+            a = s.createElement(o),
+                m = s.getElementsByTagName(o)[0];
+            a.async = 1;
+            a.src = g;
+            m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+        ga('create', 'UA-43264580-1', 'sattanaathan.in');
+        ga('send', 'pageview');
+    </script>
 </body>
-<script>
-    (function(i, s, o, g, r, a, m) {
-        i['GoogleAnalyticsObject'] = r;
-        i[r] = i[r] || function() {
-            (i[r].q = i[r].q || []).push(arguments)
-        }, i[r].l = 1 * new Date();
-        a = s.createElement(o),
-            m = s.getElementsByTagName(o)[0];
-        a.async = 1;
-        a.src = g;
-        m.parentNode.insertBefore(a, m)
-    })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
-
-    ga('create', 'UA-43264580-1', 'sattanaathan.in');
-    ga('send', 'pageview');
-</script>
 
 </html>
