--- a/resume.html
+++ b/resume.html
@@ -327,11 +327,11 @@
                     <h3>Education</h3>
                     <table class="table table-bordered">
                         <tr>
-                            <th>Program</th>
+                            <th>Degree</th>
                             <th>Major</th>
-                            <th>Institution</th>
-                            <th>% / CGPA</th>
-                            <th> Year of completion </th>
+                            <th>University / Institution</th>
+                            <th>CGPA</th>
+                            <th>Month & Year of Completion</th>
                         </tr>
                         <tr>
                             <td>Master of Science (MS)</td>
