Updated img and index.html
Updated DP in index.html

--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
                     <div class="span9">
                         <div class="page-header">
                             <h1>Sattanaathan Thayumanan</h1>
-                                <h3><b>Master of Science</b></h3>
-                                <a href="http://www.ece.ufl.edu/" target="_blank"><b>Electrical and Computer Engineering</b></a><br>
-                                <a href="http://www.ufl.edu/" target="_blank">University of Florida, Gainesville</a><br>    
+                            <h3><b>Master of Science</b></h3>
+                            <a href="http://www.ece.ufl.edu/" target="_blank"><b>Electrical and Computer Engineering</b></a><br>
+                            <a href="http://www.ufl.edu/" target="_blank">University of Florida, Gainesville</a><br>
                         </div>
                         <h4>About</h4>
                         <p>A system software designer with six years of experience designing and architecting software systems and automotive safety systems. With my recent experience as a safety systems engineer, I am looking for a change and would like
@@ -87,11 +87,11 @@
                         </table>
                     </div>
                     <div class="span3">
-                        <img src="bootstrap/img/informal_me.jpg" class="img-rounded" /><br>
+                        <!-- <img src="bootstrap/img/informal_me.jpg" class="img-rounded" /><br> -->
+                        <img src="bootstrap/img/LinkedIn_DP.jpg" class="img-rounded" /><br>
                         <!-- <p style="text-align:center">(That's me <i class="icon-arrow-up"></i>)</p> -->
                         <br>
-                        <br>
-                        <br>
+
                         <div>
                             <h4>Resume</h4>
                             <table class="table table-bordered table-hover">
@@ -107,7 +107,7 @@
                                 </tr>
                             </table>
                         </div>
-                        <br>
+
                         <div>
                             <!-- <h5>Contact</h5> -->
                             <h4>Contact</h4>
